@@ -1,17 +1,23 @@
 plugins {
-    id 'airbyte-java-connector'
+    id 'application'
+    id 'airbyte-bulk-connector'
 }
 
-airbyteJavaConnector {
-    cdkVersionRequired = '0.45.0'
-    features = ['db-destinations']
-    useLocalCdk = true
+airbyteBulkConnector {
+    core = 'load'
+    toolkits = []
+    cdk = '0.61'
 }
 
 application {
-    mainClass = 'io.airbyte.integrations.destination.dev_null.TestingDestinations'
+    mainClass = 'io.airbyte.integrations.destination.dev_null.DevNullDestination'
     applicationDefaultJvmArgs = ['-XX:+ExitOnOutOfMemoryError', '-XX:MaxRAMPercentage=75.0']
+
+    // Uncomment and replace to run locally
+    //applicationDefaultJvmArgs = ['-XX:+ExitOnOutOfMemoryError', '-XX:MaxRAMPercentage=75.0', '--add-opens', 'java.base/java.lang=ALL-UNNAMED']
 }
 
-dependencies {
-}
+// Uncomment to run locally
+//run {
+//    standardInput = System.in
+//}
